objects/ETM_Rule_Value__c.object
<CustomObject>
    <label>ETM Rule Value</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>ETM Rule Values Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETM Rule Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Logical_Value__c</fullName>
        <label>Rule Logical Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Model_Name__c</fullName>
        <label>Territory Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>